nginx/nginx-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-service
  namespace: nginx
spec: 
  selector:
    app: nginx
  ports:
   - port: 8082
     targetPort: 80
