nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
spec:
  rules:
    - host: nginx-demo.com
      http: 
        paths:
         - path: /
           pathType: Prefix
           backend: 
            service:
              name: nginx-service
              port:
                number: 8082
